--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>WebApp</goal>
+<!--               <goal>WebApp</goal> -->
             </goals>
 
           </execution>
