--- a/.gitattributes
+++ b/.gitattributes
@@ -55,6 +55,7 @@ src/main/java/org/cd2h/n3c/workstream/WorkstreamIterator.java -text
 src/main/java/org/cd2h/n3c/workstream/WorkstreamLabel.java -text
 src/main/resources/META-INF/taglib.tld -text svneol=unset#application/xml
 src/non-packaged-resources/Model.clay -text svneol=unset#application/xml
+src/non-packaged-resources/admin_views.sql -text
 src/non-packaged-resources/palantir_views.sql -text
 src/non-packaged-resources/registration.sql -text
 src/test/java/org/cd2h/n3c/README.txt -text
